# KiForge

./: .gitattributes  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/rules/: catalog.md  frontend-ui.md  frontend.md  tauri-rust.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
catalog/components/: bmp388.json  ch340k.json  icm-42688-p.json  tag-connect.json  w25q128jv.json
catalog/controllers/: esp32-s3.json  rp2040.json  stm32f405rg.json  stm32g0b1cb.json  stm32h743zi.json
catalog/symbols/: LICENSE.md
design-files/: PLAN.md
design-files/components_standardized_navigation/: code.html
design-files/connections_standardized_navigation/: code.html
design-files/logic_foundry/: DESIGN.md
design-files/my_projects_standardized_navigation/: code.html
design-files/new_project_standardized_navigation/: code.html
docs/: beta-checklist.md  ci-cd.md  next-steps.md  roadmap.md  setup-linux.md  setup-macos.md  setup-windows.md
docs/adr/: 0001-ui-primitives.md  0002-symbol-vendoring.md
docs/buttons/: README.md  button-variants.md  components-add.md  components-category-pill.md  components-continue-to-connections.md  components-go-to-projects.md  (+39 more)
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: projects.rs
src-tauri/src/domain/: project.rs
(+99 files in other folders)
