[package]
name = "kiforge"
version = "0.1.0"
description = "Project-definition workspace for planning hardware connectivity before KiCad"
authors = ["KiForge"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "kiforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.0", features = [] }
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
tempfile = "3.13"
